fixed image alignment issues

--- a/scss/locationStyles.scss
+++ b/scss/locationStyles.scss
@@ -62,30 +62,15 @@ main{
         position: relative;
         .map-image{
             width: 100%;
-            height: 100%;
+            height: auto;
             object-fit: cover;
-            z-index: 200px;
-            background: url('../assets/mobile/image-map@2x.png') no-repeat center center / cover;
             filter: grayscale(100%);
-            @media (min-width:1140px) {
-                background: url('../assets/desktop/image-map.png') no-repeat center center / cover;
-    
-                height: 34.7rem;
-                z-index: 25;
-            }
-            @media (min-width:36rem) {
-                background: url('../assets/desktop/image-map.png') no-repeat center center / cover;
-    
-                height: 34.7rem;
-                z-index: 25;
-            }
-           
         }
         .button2 {
             position: absolute;
             left: 11%;
             top: 0;
-        
+            
             width: 240px;
             height: 65px;
             display: flex;
